New document `TypedHeaders.mdx`
Described about `@TypedHeaders()` in the guide documents.

--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -327,7 +327,7 @@ exports.BbsArticlesController = BbsArticlesController;
     </Tab>
 </Tabs>
 
-Just call `@TypedBody()` function on the request body property, that's all.
+Just call `@TypedBody()` function on the request body parameter, that's all.
 
 `Nestia` will analyze your type (`IBbsArticle.IUpdate`), and writes optimal code for the target type, in the compilation level. If you click the "Complied JavaScript File" tab of above, you can see the optimal validation code. 
 
