--- a/website/pages/docs/core/TypedQuery.mdx
+++ b/website/pages/docs/core/TypedQuery.mdx
@@ -481,7 +481,7 @@ At next, type of properties must be **atomic**, or array of atomic type. In the 
   - `bigint`
   - `string`
 
-```typescript
+```typescript filename="SomeQueryDto.ts" showLineNumbers
 export interface SomeQueryDto {
     //----
     // ATOMIC TYPES
