[chore] modify word

--- a/website/pages/docs/sdk/e2e.mdx
+++ b/website/pages/docs/sdk/e2e.mdx
@@ -22,7 +22,7 @@ npx nestia e2e
     </Tab>
 </Tabs>
 
-Configure [`nestia.config.ts`](#configuration) file and run `npx nesta e2e` command.
+Configure [`nestia.config.ts`](#configuration) file and run `npx nestia e2e` command.
 
 Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate both [SDK (Software Development Kit) library](./sdk) for client developers. Also, E2E test functions, utilizing the [SDK library](./sdk), will be automatically generated for correspnding to every API functions.
 
