--- a/website/pages/docs/core/TypedParam.mdx
+++ b/website/pages/docs/core/TypedParam.mdx
@@ -136,7 +136,7 @@ exports.ParametersController = ParametersController;
 
 Just call `@TypedParam()` function on the path paremeter, that's all.
 
-If you want to special parameter type `"uuid"` or `"date"`, write it as the second argument.
+If you want to special parameter type like `"uuid"` or `"date"`, utilize [type tag of `typia`](https://typia.io/docs/validators/tags).
 
 When wrong typed value comes, 400 bad request error would be thrown.
 
