--- a/website/pages/docs/sdk/e2e.mdx
+++ b/website/pages/docs/sdk/e2e.mdx
@@ -265,7 +265,7 @@ export namespace INestiaConfig {
 
 Make `nestia.config.ts` file and run `npx nestia sdk` command.
 
-At first, create `nestia.config.ts` file. It must be placed on the top level directory of your NestJS backend project. Of course, `tsconfig.json` file also must be placed in the top level directory, too. After creation, configure the `nestia.config.ts` file referencing above example code and type definition.
+At first, create `nestia.config.ts` file through `npx nestia init` command. It would be placed on the top level directory of your NestJS backend project. For reference, `tsconfig.json` file also must be placed in the top level directory, too. After creation, configure the `nestia.config.ts` file referencing above example code and type definition.
 
 At least, you've to configure those three properties:
 
