--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -336,12 +336,12 @@ Such optimization is called AOT (Ahead of Time) compilation, and it is the secre
 
 
 
-## Comment Tags
-You can enhance validation logic, of `@TypedBody()`, through comment tags.
+## Special Tags
+You can enhance validation logic, of `@TypedBody()`, through special tags.
 
-You know what? `@TypedBody()` utilizes [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function for request body data validation, and the [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function supports additional type checking logics through comment tags. For reference, the "Comment Tag" means a comment starting from `@` symbol. It follows `@${name} ${value}` format, and you can add multiple comment tags per each property.
+You know what? `@TypedBody()` utilizes [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function for request body data validation, and the [`typia.assert<T>()`](https://typia.io/docs/validators/assert) function supports additional type checking logics through type and comment tags. For reference, "Type Tag" means a intersection type with atomic type and special tag type of `typia` like `number & tags.Type<"uint32">`, and "Comment Tag" means a comment starting from `@` symbol following `@${name} ${value}` format.
 
-With those comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Docments of [typia](https://typia.io), and see the example code. You may understand how to utilize such comment tags, in a few minutes.
+With those type and comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Docments of [typia](https://typia.io), and see the example code. You may understand how to utilize such type and comment tags, in a few minutes.
 
   - [**`typia` > Validators > Custom Tags**](https://typia.io/docs/validators/tags/)
     - [Outline](https://typia.io/docs/validators/tags/#outline)
@@ -352,45 +352,20 @@ With those comment tags, you can add additional validation logics. If you want t
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
     <Tab>
 ```typescript copy filename="examples/src/is-comment-tags.ts" showLineNumbers {3}
-import typia from "typia";
+import typia, { tags } from "typia";
 
-export const checkCommentTag = typia.createIs<CommentTag>();
+export const checkSpecialTag = typia.createIs<SpecialTag>();
 
-interface CommentTag {
-    /**
-     * @type int
-     */
-    type: number;
-
-    /**
-     * @exclusiveMinimum 19
-     * @maximum 100
-     */
-    number?: number;
-
-    /**
-     * @minLength 3
-     */
-    string: string;
-
-    /**
-     * @pattern ^[a-z]+$
-     */
-    pattern: string;
-
-    /**
-     * @format date-time
-     */
-    format: string | null;
-
-    /**
-     * In the Array case, possible to restrict its elements.
-     *
-     * @minItems 3
-     * @maxItems 100
-     * @format uuid
-     */
-    array: string[];
+interface SpecialTag {
+    int32: number & tags.Type<"int32">;
+    range?: number & tags.ExclusiveMinimum<19> & tags.Maximum<100>;
+    minLength: string & tags.MinLength<3>;
+    pattern: string & tags.Pattern<"^[a-z]+$">;
+    date: null | (string & tags.Format<"date">);
+    ip: string & (tags.Format<"ipv4"> | tags.Format<"ipv6">);
+    uuids: Array<string & tags.Format<"uuid">>
+        & tags.MinItems<3>
+        & tags.MaxItems<100>;
 }
 ```
     </Tab>
